infra/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cliente-api
  labels:
    app: cliente-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cliente-api
  template:
    metadata:
      labels:
        app: cliente-api
    spec:
      containers:
        - name: cliente-api
          image: cliente-api:v1
          imagePullPolicy: Never
          ports:
            - containerPort: 8081
