infra/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cliente-api
  labels:
    run: cliente-api
spec:
  ports:
    - port: 8081
      targetPort: 8081
      protocol: TCP
  selector:
    app: cliente-api
